# stable

./: .gitignore  CMakeLists.txt  stable.cpp
assets/: vAlpha_lookup_tables.csv  vBeta_lookup_tables.csv  vDelta_lookup_tables.csv  vGamma_lookup_tables.csv
include/: quantile_estimator_lookup_table.hpp  stable.hpp  stable_distribution.hpp  stable_estimation.hpp  stable_estimation_quantile.hpp  stable_simulation.hpp  utils.hpp
src/: CMakeLists.txt  build_lookup_tables.cpp  main.cpp  stable.cpp  stable_distribution.cpp  stable_estimation.cpp  stable_python_wrapper.cpp  stable_simulation.cpp
src/estimation/: stable_estimation.cpp  stable_estimation_quantile.cpp
src/estimation/utils/: quantile_estimator_lookup_table.cpp
src/utils/: utils.cpp
test/: CMakeLists.txt  mean_test.cpp  performance_test_stable.cpp  quantile_estimator_lookup_table_test.cpp  stable_estimation_quantile_test.cpp  stable_estimation_test.cpp  stable_simulation_test.cpp  stable_test.cpp
tests/: stable_test
